Commit 010_HTML Quotation and Citation Elements.html to 024_HTML Layouts.html

--- a/html/010_HTML Quotation and Citation Elements.html
+++ b/html/010_HTML Quotation and Citation Elements.html
@@ -5,6 +5,41 @@
 	<title>HTML Quotation and Citation Elements</title>
 </head>
 <body>
-	
+<!-- Quotation -->
+	<q>Browsers usually insert quotation marks around the q element</q>
+
+<!-- HTML <blockquote> for Quotations -->
+	<q> Here is a quote from WWF's website:</q>
+	<blockquote cite="http://www.worldwildlife.org/who/index.html">
+	For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization, WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally.
+	</blockquote>
+
+<!-- HTML <abbr> for Abbreviations -->
+	<q>The <abbr title="World Health Organization">WHO</abbr>was found in 1948.</q>
+
+<!-- HTML <address> for Contact Information -->
+	<address>
+	Written by TM
+	<br>
+	Visit us at: tm.com
+	<br>
+	Box 568, Nguyen Khanh Toan, VN
+	</address>
+
+<!-- HTML <cite> for Work Title -->
+	<p><cite>The Scream</cite> by TM. Painted in 1893.</p>
+
+<!-- HTML <bdo> for Bi-Directional Override -->
+	<bdo dir="rtl">This text will be written from right to left</bdo>
+
+
+<!-- 
+<abbr>	Defines an abbreviation or acronym
+<address>	Defines contact information for the author/owner of a document
+<bdo>	Defines the text direction
+<blockquote>	Defines a section that is quoted from another source
+<cite>	Defines the title of a work
+<q>	Defines a short inline quotation
+-->
 </body>
 </html>
